--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css);
 @import url(auth.css);
+@import url(sidebar.css);
+@import url(https://cdn.lineicons.com/4.0/lineicons.css);
 
 body{
   margin: 0;
