--- a/assets/css/auth.css
+++ b/assets/css/auth.css
@@ -1,7 +1,6 @@
 .bg-login {
   padding: 0;
   margin: 0;
-
   object-fit: cover;
   background-image: url(../images/bg-login.svg);
   background-position: center;
@@ -25,6 +24,11 @@
 
 .area-login{
   width: 100%;
+}
+
+.area-dados{
+  max-height: 360px;
+  overflow-y: auto;
 }
 
 .title-login{
@@ -59,8 +63,24 @@
   font-size: 13px;
 }
 
+.areaButton{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-
+.btn-google{
+  width: 100%;
+  height: 50px;
+  
+  border: none !important;
+}
+.btn-instagram{
+  width: 100%;
+  height: 50px;
+ 
+  border: none !important;
+}
 
 .area-escolha .btn-construtora{
   border: solid 2px rgba(102,109,163,1);
