--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,18 +20,24 @@ body {
 }
 
 .btn-active {
-  background-color: black !important;/* Fundo preto */
-  color: white; /* Texto branco */
+  background-color: black !important;
+  /* Fundo preto */
+  color: white;
+  /* Texto branco */
 }
 
 .btn-inactive {
-  background-color: transparent; /* Fundo transparente */
-  color: black; /* Texto preto */
-  border: none; /* Opcional: adicione uma borda preta */
+  background-color: transparent;
+  /* Fundo transparente */
+  color: black;
+  /* Texto preto */
+  border: none;
+  /* Opcional: adicione uma borda preta */
 }
 
 .vertical-hr {
-  height: 30px; /* Ajuste conforme a altura desejada */
+  height: 30px;
+  /* Ajuste conforme a altura desejada */
   width: 1px;
   background-color: black;
   margin-left: 6px;
@@ -48,21 +54,31 @@ body {
   padding: 5px;
 }
 
-.btn-outline-danger, .btn-outline-success{
+.btn-outline-danger,
+.btn-outline-success {
   width: 100%;
   padding-top: 12.9px;
   padding-bottom: 12.9px;
   background-color: #fff;
 }
 
-.btn-outline-danger{
-  border-radius:   0 5px 5px 0;
+.btn-outline-danger {
+  border-radius: 0 5px 5px 0;
 }
-.btn-outline-success{
-  border-radius:   5px 0 0 5px;
-} 
+
+.btn-outline-success {
+  border-radius: 5px 0 0 5px;
+}
 
 
-.btn-group{
+.btn-group {
   width: 100%;
+}
+
+.loading {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 100px;
+  margin-top: 20%;
 }
