--- a/assets/css/auth.css
+++ b/assets/css/auth.css
@@ -3,22 +3,32 @@
   margin: 0;
   object-fit: cover;
   background-image: url(../images/bg-login.svg);
-  background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  position: fixed;
+  width: 50%;
+  height: 100%;
+  right: 0;
 }
 
 .gradient{
   background-image: linear-gradient(180deg, rgba(55,111,186,1), rgba(198,105,118,1));
   width: 100%;
-  height: 100vh;
+  height: 100%;
   mix-blend-mode: multiply;
+  display: flex;
+  align-items: center;
+
 }
+
+.gradient img{
+  margin: 0 auto;
+}
+
 
 .gradientCad{
   background-image: linear-gradient(180deg, rgba(55,111,186,1), rgba(198,105,118,1));
   width: 100%;
-  height: 130vh;
+  min-height: 130vh;
   mix-blend-mode: multiply;
 }
 
@@ -27,8 +37,6 @@
 }
 
 .area-dados{
-  max-height: 360px;
-  overflow-y: auto;
 }
 
 .title-login{
