--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -263,7 +263,7 @@ label[for="formFile"] {
 
 .msgPerfil {
 
-  width: 20%;
+  width: 25%;
   margin-left: 2%;
   margin-top: 2%;
   padding: 5px;
@@ -310,12 +310,12 @@ label[for="formFile"] {
 }
 
 .msgContato {
-  width: 15%;
+  width: 20%;
   right: 0;
   position: fixed;
   bottom: 0;
-  margin-top: 5% !important;
-  margin-bottom: 3% !important;
+  margin-top: 8% !important;
+  margin-bottom: 5% !important;
   padding: 5px;
   border-radius: 50px;
   background-color: #0ec55a;
@@ -331,3 +331,39 @@ label[for="formFile"] {
   margin-left: 2px;
   text-align: center;
 }
+
+.preview-photo-prato{
+  width: 200px;
+  height: 400px;
+  background-color: rgb(245, 245, 245);
+  border-radius: 10px;
+  border: 2px solid #848484;
+  margin: 0;
+}
+
+.area-photo-prato{
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.img-photo-prato{
+  width: 200px;
+  height: 400px;
+  border: 2px solid #848484;
+  border-radius: 10px;
+  background-image: url('../images/iconUpload.jpg');
+  background-size: cover;
+  margin: 0 !important;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  position: absolute !important;
+  
+}
+
+.btn-remover{
+  position: absolute;
+} 
