--- a/assets/css/imovelPage.css
+++ b/assets/css/imovelPage.css
@@ -7,7 +7,7 @@
     height: 50vh;
 }
 
-.gradient {
+.gradient-page-imovel {
     position: absolute;
     top: 0;
     left: 0;
@@ -59,7 +59,6 @@
     /* Centraliza o texto dentro do item */
 }
 
-
 .capa {
     width: 100%;
     height: 50vh;
@@ -108,13 +107,12 @@
 }
 
 .imagem-imovel {
-
     width: 215px;
     height: 350px;
-    border-radius: 15px;
+    border-radius: 30px;
     object-fit: cover;
-margin-top: 10%;
-margin-left: 1%;
-margin-right: 1%;
+    margin-top: 10%;
+    margin-left: 1%;
+    margin-right: 1%;
 
 }
