--- a/assets/css/imovelPage.css
+++ b/assets/css/imovelPage.css
@@ -1,3 +1,6 @@
+.body{
+    background-color: #FFF;
+}
 .capa-area {
     width: 100vw;
     margin: 0;
@@ -77,8 +80,8 @@
 .logo-area {
     position: absolute;
     top: 50%;
-    left: 55%;
-    transform: translate(-50%, -50%);
+    left: 55.5%;
+    transform: translate(-44.5%, -50%);
     z-index: 3;
     /* Maior que todos para garantir que fique no topo */
     width: auto;
@@ -99,6 +102,11 @@
     text-transform: uppercase;
 }
 
+.text-title-h2 {
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
 .text-title-subtitle {
     font-size: 15px;
     font-weight: 300 !important;
@@ -116,3 +124,115 @@
     margin-right: 1%;
 
 }
+
+
+/* lightbox */
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 2%;
+  }
+  
+  .thumbnail {
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    border-radius: 10px;
+    object-fit: cover;
+    cursor: pointer;
+    box-shadow: 0 5px 10px rgba(100,100,100, .2);
+  }
+  
+  .lightbox {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+  }
+  
+  .lightbox-img {
+    display: block;
+    max-width: 80%;
+    max-height: 80%;
+    margin: auto;
+  }
+  
+  .close {
+    color: #fff;
+    font-size: 40px;
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    cursor: pointer;
+  }
+
+  /* Fim Lightbox */
+
+
+  .box{
+    display: flex;
+    align-items: center;
+    width: 23%;
+    margin: 1%;
+    padding: 1%;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(100,100,100, .2);
+  }
+
+  .box h4, .box-alter h4{
+    color: #9E9E9E;
+  }
+  
+  .box h2{
+    font-size: 22px;
+  }
+
+  .box-alter{
+    display: flex;
+    align-items: center;
+    width: 98%;
+    margin: 1%;
+    padding: 1%;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(100,100,100, .2);
+  }
+
+  .box-alter .box-item{
+    object-fit: cover;
+  }
+
+  .box-video{
+    display: flex;
+    align-items: center;
+    width: 48%;
+    margin: 1%;
+    padding: 1%;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(100,100,100, .2);
+  }
+
+  .box-check{
+    display: flex;
+    padding-top: 6%;
+  }
+
+
+  .box-check i{
+    color: #5AB910;
+    font-size: 20px;
+  }
+
+  .map{
+    width: 98%;
+    height: 300px;
+    margin: 1%; padding: 0;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0 5px 10px rgba(100,100,100, .2);
+  }
+  
