--- a/assets/css/imovelPage.css
+++ b/assets/css/imovelPage.css
@@ -120,6 +120,18 @@ html {
   box-shadow: 0 5px 10px rgba(100, 100, 100, .2);
 }
 
+.thumbnail-modal {
+  width: 100%;
+  max-width: 200px;
+  height: 50%;
+  max-height: 100px;
+  min-height: 150px;
+  border-radius: 10px;
+  object-fit: cover;
+  cursor: pointer;
+  box-shadow: 0 5px 10px rgba(100, 100, 100, .2);
+}
+
 .lightbox {
   display: none;
   position: fixed;
